# go/docs/swagger.json
@@ -153,6 +153,32 @@
                     }
                 }
             }
+        },
+        "/register": {
+            "get": {
+                "description": "Show the registration page.",
+                "produces": [
+                    "text/html"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Serve register page",
+                "responses": {
+                    "200": {
+                        "description": "HTML of registration page",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Template not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
